# wired

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  tsconfig.json
apps/desktop/: index.html  package.json  tsconfig.json
apps/desktop/src/: App.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: main.rs
apps/web/: next.config.ts  package.json  tsconfig.json
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/app/api/github/: route.ts
apps/web/src/app/api/notes/[noteId]/: route.ts
apps/web/src/app/api/notes/[noteId]/enhance/: route.ts
apps/web/src/app/api/notes/[noteId]/sync/: route.ts
apps/web/src/app/api/projects/: route.ts
apps/web/src/app/api/projects/[id]/: route.ts
apps/web/src/app/api/projects/[id]/branches/: route.ts
apps/web/src/app/api/projects/[id]/intelligence/: route.ts
apps/web/src/app/api/settings/: route.ts
apps/web/src/app/projects/: page.tsx
apps/web/src/app/projects/[id]/: page.tsx
apps/web/src/app/projects/[id]/intelligence/: page.tsx
apps/web/src/app/projects/[id]/notes/: page.tsx
apps/web/src/app/projects/new/: page.tsx
apps/web/src/app/settings/: page.tsx
apps/web/src/lib/: db.ts  project-scans.test.ts  project-scans.ts  scan-trigger-auth.test.ts  scan-trigger-auth.ts  settings.test.ts  settings.ts
docs/: ARCHITECTURE.md  SECURITY.md  SYNC_SPEC.md
scripts/: seed-demo-data.ts  setup-dev.sh
wired/apps/web/: tailwind.config.js
wired/apps/web/src/app/: globals.css
(+6 files in other folders)
